added feathercoin-qt and test_feathercoin binaries to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ Makefile*
 src/feathercoin
 src/feathercoind
 src/feathercoin-cli
+src/qt/feathercoin-qt
+src/test/test-feathercoin
 
 # ignore files created by autoconf and conf
 src/bitcoin-config.h
