--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ Makefile*
 src/feathercoin
 src/feathercoind
 src/feathercoin-cli
+src/qt/test/test_feathercoin-qt
+src/test/test_feathercoin
+
 
 # ignore files created by autoconf and conf
 src/bitcoin-config.h
