--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ build-aux/ltmain.sh
 build-aux/missing
 build-aux/test-driver
 src/config/bitcoin-config.h.in
+modified:   aclocal.m4
+build-aux/m4/libtool.m4
+src/config/bitcoin-config.h.in
+src/secp256k1/aclocal.m4
 
 .directory
 .libs
