removed setting of LDFLAGS=-fPIC
The setting of LDFLAGS=-fPIC made it impossible to find BDB and BOOST
libraries.

Problem: with --enable-dynamic neoscript can't be linked without
-fPIC when compiling neoscrypt

--- a/configure.ac
+++ b/configure.ac
@@ -404,7 +404,7 @@ fi
 if test x$use_hardening != xno; then
   AX_CHECK_COMPILE_FLAG([-Wstack-protector],[HARDENED_CXXFLAGS="$HARDENED_CXXFLAGS -Wstack-protector"])
   AX_CHECK_COMPILE_FLAG([-fstack-protector-all],[HARDENED_CXXFLAGS="$HARDENED_CXXFLAGS -fstack-protector-all"])
-  AX_CHECK_COMPILE_FLAG([-fPIC],[HARDENED_CXXFLAGS="$HARDENED_CXXFLAGS -fPIC; CFLAGS= $CFLAGS -fPIC"])
+  dnl AX_CHECK_COMPILE_FLAG([-fPIC],[HARDENED_CXXFLAGS="$HARDENED_CXXFLAGS -fPIC ])
 
   AX_CHECK_PREPROC_FLAG([-D_FORTIFY_SOURCE=2],[
     AX_CHECK_PREPROC_FLAG([-U_FORTIFY_SOURCE],[
@@ -501,6 +501,8 @@ AC_SUBST(LIBMEMENV)
 
 if test x$enable_wallet != xno; then
     dnl Check for libdb_cxx only if wallet enabled
+    C
+    dnl BITCOIN_FIND_BDB61
     dnl BITCOIN_FIND_BDB51
     BITCOIN_FIND_BDB48
 fi
