--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ modified:   aclocal.m4
 build-aux/m4/libtool.m4
 src/config/bitcoin-config.h.in
 src/secp256k1/aclocal.m4
+build-aux/m4/libtool.m4
+src/config/bitcoin-config.h.in
+src/secp256k1/aclocal.m4
+
 
 .directory
 .libs
