--- a/src/config/bitcoin-config.h.in
+++ b/src/config/bitcoin-config.h.in
@@ -360,13 +360,15 @@
 # endif
 #endif
 
+/* Enable large inode numbers on Mac OS X 10.5.  */
+#ifndef _DARWIN_USE_64_BIT_INODE
+# define _DARWIN_USE_64_BIT_INODE 1
+#endif
+
 /* Number of bits in a file offset, on hosts where this is settable. */
 #undef _FILE_OFFSET_BITS
 
 /* Define for large files, on AIX-style hosts. */
 #undef _LARGE_FILES
-
-/* Define to 0 libzxing must be available for support */
-#undef USE_ZXING
 
 #endif //BITCOIN_CONFIG_H
