--- a/src/makefile.osx
+++ b/src/makefile.osx
@@ -106,8 +106,7 @@ OBJS= \
     obj/bloom.o \
     obj/noui.o \
     obj/leveldb.o \
-    obj/txdb.o \
-    obj/checkpointsync.o
+    obj/txdb.o
 
 ifndef USE_UPNP
 	override USE_UPNP = -
@@ -144,10 +143,10 @@ leveldb/libleveldb.a:
 -include obj-test/*.P
 
 obj/neoscrypt.o: neoscrypt.c
-	$(CC) $(CFLAGS) -DSHA256 -c -o $@ $^
+	$(CC) $(CFLAGS) -DSHA256 -DASM -DOPT -c -o $@ $^
 
 obj/neoscrypt_asm.o: neoscrypt_asm.S
-	$(CC) -c -o $@ $^
+	$(CC) -c -DSHA256 -DASM -DOPT -o $@ $^
 
 obj/build.h: FORCE
 	/bin/sh ../share/genbuild.sh obj/build.h
