--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -112,8 +112,7 @@ OBJS= \
     obj/bloom.o \
     obj/noui.o \
     obj/leveldb.o \
-    obj/txdb.o \
-    obj/checkpointsync.o
+    obj/txdb.o
 
 all: feathercoind
 
@@ -135,10 +134,10 @@ leveldb/libleveldb.a:
 -include obj-test/*.P
 
 obj/neoscrypt.o: neoscrypt.c
-	gcc -O2 -fomit-frame-pointer -DSHA256 -c -o $@ $^
+	gcc -O2 -fomit-frame-pointer -DSHA256 -DASM -DOPT -c -o $@ $^
 
 obj/neoscrypt_asm.o: neoscrypt_asm.S
-	gcc -c $(CFLAGS) $(INCPATH) -o obj/neoscrypt_asm.o neoscrypt_asm.S
+	gcc -c -DSHA256 -DASM -DOPT -o $@ $^
 
 obj/build.h: FORCE
 	/bin/sh ../share/genbuild.sh obj/build.h
