fixed error to find qrcode zxing libraries

--- a/configure.ac
+++ b/configure.ac
@@ -542,13 +542,10 @@ if test x$use_pkgconfig = xyes; then
       BITCOIN_QT_CHECK([PKG_CHECK_MODULES([PROTOBUF], [protobuf], [have_protobuf=yes], [BITCOIN_QT_FAIL(libprotobuf not found)])])
       if test x$use_qr != xno; then
 	if test x$TARGET_OS != xdarwin; then
-	  PKG_CHECK_MODULES([QRENCODE], [libqrencode],, [AC_MSG_ERROR(libqrencode  not found.)])
-	  PKG_CHECK_MODULES([ZXING], [libzxing],, [AC_MSG_ERROR(libzxing  not found.)])
+	  PKG_CHECK_MODULES([QRENCODE], [libqrencode] [libzxing],, [AC_MSG_ERROR(qrencode/zxing libraries  not found.)])
 	else 
 	 BITCOIN_QT_CHECK([AC_CHECK_LIB([qrencode], [main],, [have_qr=no])])
-         BITCOIN_QT_CHECK([AC_CHECK_LIB([zxing], [main],, BITCOIN_QT_FAIL(1..libzxing not found))])
-         BITCOIN_QT_CHECK([AC_CHECK_HEADER([qrencode.h],, have_qr=no)])
-         BITCOIN_QT_CHECK([AC_CHECK_HEADER([zxing.h],, have_zxing=no)])
+         BITCOIN_QT_CHECK([AC_CHECK_LIB([zxing], [main],, BITCOIN_QT_FAIL(libzxing not found))])
 	fi  
       fi
     ]
@@ -563,11 +560,12 @@ else
   BITCOIN_QT_CHECK(AC_CHECK_LIB([protobuf] ,[main],,BITCOIN_QT_FAIL(libprotobuf not found)))
   if test x$use_qr != xno; then
     BITCOIN_QT_CHECK([AC_CHECK_LIB([qrencode], [main],, [have_qr=no])])
-    BITCOIN_QT_CHECK([AC_CHECK_LIB([zxing], [main],, BITCOIN_QT_FAIL(1..libzxing not found))])
-    BITCOIN_QT_CHECK([AC_CHECK_HEADER([qrencode.h],, have_qr=no)])
-    BITCOIN_QT_CHECK([AC_CHECK_HEADER([zxing.h],, have_zxing=no)])
+    BITCOIN_QT_CHECK([AC_CHECK_LIB([zxing], [main],, BITCOIN_QT_FAIL(libzxing not found))])
   fi
 fi
+
+BITCOIN_QT_CHECK([AC_CHECK_HEADER([qrencode.h],, (have_qr=no [qrcode header files missing]))])
+BITCOIN_QT_CHECK([AC_CHECK_HEADER([zxing/ZXing.h],, (have_zxing=no [zxing header files missing]))])
 
 BITCOIN_QT_PATH_PROGS([PROTOC], [protoc],$protoc_bin_path)
 
