search for header qrencode header files fixed

--- a/configure.ac
+++ b/configure.ac
@@ -566,8 +566,10 @@ else
   fi
 fi
 
+if test x$use_qr != xno; then
 BITCOIN_QT_CHECK([AC_CHECK_HEADER([qrencode.h],, (have_qr=no [qrcode header files missing]))])
 BITCOIN_QT_CHECK([AC_CHECK_HEADER([zxing/ZXing.h],, (have_zxing=no [zxing header files missing]))])
+fi
 
 BITCOIN_QT_PATH_PROGS([PROTOC], [protoc],$protoc_bin_path)
 
