Added cmake to packages needed for zxing.

--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -27,6 +27,7 @@ packages:
 - "bsdmainutils"
 - "ca-certificates"
 - "python"
+- "cmake"
 remotes:
 - "url": "https://github.com/natedavis/feathercoin.git"
   "dir": "feathercoin"
