Fix Makefile.in not generating in doc/man

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ src/test/test_bitcoin_fuzzy
 src/qt/test/test_bitcoin-qt
 
 # autoreconf
-#Makefile.in
+Makefile.in
 aclocal.m4
 autom4te.cache/
 build-aux/config.guess
